tests/NormalTests/paczka1/fuzzy1/17583955.err
Error in line 1: abLa9a4 S626 80,6
Error in line 3: abLa9a4 S423 29,8
Error in line 17: ajsq88NLSX A785 49,7
Error in line 20: S626 A785 13,6
Error in line 16: wlKHl A785 6,1
Error in line 34: S626 A785 48,1
